# senac-datascience

atividade_01/: pyproject.toml
atividade_01/src/app/: contact_manager.py
atividade_01/tests/: test_app.py
atividade_02/: pyproject.toml
atividade_02/src/app/: main.py
atividade_03/: README.md  pyproject.toml
atividade_03/src/app/: boxplot.py  boxplot_no_outliers.py  help.py  histogram.py  kde.py  main.py  normal_distribution.py
atividade_04/: README.md  justfile  pyproject.toml
atividade_04/src/: train.parquet
atividade_04/src/app/: boxplot.py  histogram_kde.py  kde.py  main.py
atividade_2_metodo_cientifico/: README.md  pyproject.toml
atividade_2_metodo_cientifico/src/atividade_2_metodo_cientifico/: main.py
desafio_i/: README.md  pyproject.toml
desafio_i/src/: data.json
desafio_i/src/desafio_i/: contact_manager.py  contact_register.py  handlers.py  main.py  shared.py  sistema_de_cadastro.py
desafio_i/src/desafio_i/handlers/: handle_add.py  handle_del.py  handle_list.py
desafio_i/tests/: test_desafio_i.py
