[project]
name = "app"
version = "0.1.0"
description = ""
authors = [{ name = "Kacaii", email = "kacaii.privado@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["polars-lts-cpu (>=1.32.2,<2.0.0)", "pytest (>=8.4.1,<9.0.0)"]

[tool.poetry]
packages = [{ include = "app", from = "src" }]

[tool.poetry.scripts]
start = "app.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
