[project]
name = "app"
version = "0.1.0"
description = ""
authors = [{ name = "Kacaii", email = "kacaii.privado@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "polars (>=1.32.3,<2.0.0)",
  "matplotlib (>=3.10.5,<4.0.0)",
  "scipy (>=1.16.1,<2.0.0)",
]

[tool.poetry]
packages = [{ include = "app", from = "src" }]

[tool.poetry.scripts]
# 󰞋  Display a help message
help = "app.help:main"

#   Main scripts
kde = "app.kde:main"
histogram = "app.histogram:main"
boxplot = "app.boxplot:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
