[project]
name = "app"
version = "0.1.0"
description = ""
authors = [{ name = "Kacaii", email = "kacaii.privado@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "matplotlib (>=3.10.6,<4.0.0)",  #  Display Data
  "seaborn (>=0.13.2,<0.14.0)",    #  Dataframs
  "altair (>=5.5.0,<6.0.0)",       #  Needed to display a window
  "pyarrow (>=21.0.0,<22.0.0)",    #  Needed to display a window
  "scikit-learn (>=1.7.1,<2.0.0)",
  "polars-lts-cpu (>=1.33.0,<2.0.0)",
]

[tool.poetry]
packages = [{ include = "app", from = "src" }]

[tool.poetry.scripts]

kde = "app.kde:main"
boxplot = "app.boxplot:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
