[project]
name = "desafio-i"
version = "0.1.0"
description = ""
authors = [{ name = "Kacaii", email = "kacaii.privado@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["polars-lts-cpu (>=1.32.2,<2.0.0)"]

[tool.poetry]
packages = [{ include = "desafio_i", from = "src" }]

[tool.poetry.scripts]
start = "desafio_i.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
